--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script src="alert.js"></script>
-    <script src=""></script>
+    <script src="prompt.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
