New exercises of js,class practice

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercises of JS 1-20</title>
 </head>
+
 <body>
     <script src="alert.js"></script>
     <script src="prompt.js"></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
+    <script src="ifelse.js"></script>
+    <script src="variables.js"></script>
+    <script src="classtest.js"></script>
     <script src=""></script>
     <script src=""></script>
 
